--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
+    "@sanity/asset-utils": "^1.3.0",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
+    "date-fns": "^2.30.0",
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18"
